parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EMPTY_MAP
    GET

Grammar

Rule 0     S' -> body
Rule 1     body -> LBRACKET compound_statement RBRACKET
Rule 2     execution -> compound_statement
Rule 3     execution -> body
Rule 4     compound_statement -> stmt SCOLON
Rule 5     compound_statement -> compound_statement stmt SCOLON
Rule 6     compound_statement -> compound_statement stmt
Rule 7     stmt -> DROP
Rule 8     stmt -> DUP
Rule 9     stmt -> SWAP
Rule 10    stmt -> UNIT
Rule 11    bool -> TRUE
Rule 12    bool -> FALSE
Rule 13    value -> NUMBER
Rule 14    value -> bool
Rule 15    value -> TEXT
Rule 16    value -> LPARENS PAIR_CONSTRUCTOR value value RPARENS
Rule 17    stmt -> EQ
Rule 18    stmt -> NEQ
Rule 19    stmt -> LT
Rule 20    stmt -> GT
Rule 21    stmt -> LE
Rule 22    stmt -> GE
Rule 23    stmt -> OR
Rule 24    stmt -> AND
Rule 25    stmt -> XOR
Rule 26    stmt -> COMPARE
Rule 27    stmt -> NEG
Rule 28    stmt -> ABS
Rule 29    stmt -> ADD
Rule 30    stmt -> SUB
Rule 31    stmt -> MUL
Rule 32    stmt -> EDIV
Rule 33    stmt -> LSL
Rule 34    stmt -> LSR
Rule 35    stmt -> CONCAT
Rule 36    stmt -> SIZE
Rule 37    stmt -> SLICE
Rule 38    stmt -> PAIR
Rule 39    stmt -> CAR
Rule 40    stmt -> CDR
Rule 41    stmt -> EMPTY_SET TYPE
Rule 42    stmt -> MEM
Rule 43    stmt -> UPDATE
Rule 44    stmt -> SOME
Rule 45    stmt -> NONE TYPE
Rule 46    stmt -> LEFT TYPE
Rule 47    stmt -> RIGHT TYPE
Rule 48    stmt -> CONS
Rule 49    stmt -> NIL TYPE
Rule 50    stmt -> NOT
Rule 51    TYPE -> NAT
Rule 52    TYPE -> STRING
Rule 53    TYPE -> INT
Rule 54    TYPE -> BOOL
Rule 55    TYPE -> BYTES
Rule 56    TYPE -> LPARENS LPAIR TYPE TYPE RPARENS
Rule 57    stmt -> PUSH TYPE value
Rule 58    stmt -> FAILWITH

Terminals, with rules where they appear

ABS                  : 28
ADD                  : 29
AND                  : 24
BOOL                 : 54
BYTES                : 55
CAR                  : 39
CDR                  : 40
COMPARE              : 26
CONCAT               : 35
CONS                 : 48
DROP                 : 7
DUP                  : 8
EDIV                 : 32
EMPTY_MAP            : 
EMPTY_SET            : 41
EQ                   : 17
FAILWITH             : 58
FALSE                : 12
GE                   : 22
GET                  : 
GT                   : 20
INT                  : 53
LBRACKET             : 1
LE                   : 21
LEFT                 : 46
LPAIR                : 56
LPARENS              : 16 56
LSL                  : 33
LSR                  : 34
LT                   : 19
MEM                  : 42
MUL                  : 31
NAT                  : 51
NEG                  : 27
NEQ                  : 18
NIL                  : 49
NONE                 : 45
NOT                  : 50
NUMBER               : 13
OR                   : 23
PAIR                 : 38
PAIR_CONSTRUCTOR     : 16
PUSH                 : 57
RBRACKET             : 1
RIGHT                : 47
RPARENS              : 16 56
SCOLON               : 4 5
SIZE                 : 36
SLICE                : 37
SOME                 : 44
STRING               : 52
SUB                  : 30
SWAP                 : 9
TEXT                 : 15
TRUE                 : 11
UNIT                 : 10
UPDATE               : 43
XOR                  : 25
error                : 

Nonterminals, with rules where they appear

TYPE                 : 41 45 46 47 49 56 56 57
body                 : 3 0
bool                 : 14
compound_statement   : 1 2 5 6
execution            : 
stmt                 : 4 5 6
value                : 16 16 57

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . LBRACKET compound_statement RBRACKET

    LBRACKET        shift and go to state 2

    body                           shift and go to state 1

state 1

    (0) S' -> body .



state 2

    (1) body -> LBRACKET . compound_statement RBRACKET
    (4) compound_statement -> . stmt SCOLON
    (5) compound_statement -> . compound_statement stmt SCOLON
    (6) compound_statement -> . compound_statement stmt
    (7) stmt -> . DROP
    (8) stmt -> . DUP
    (9) stmt -> . SWAP
    (10) stmt -> . UNIT
    (17) stmt -> . EQ
    (18) stmt -> . NEQ
    (19) stmt -> . LT
    (20) stmt -> . GT
    (21) stmt -> . LE
    (22) stmt -> . GE
    (23) stmt -> . OR
    (24) stmt -> . AND
    (25) stmt -> . XOR
    (26) stmt -> . COMPARE
    (27) stmt -> . NEG
    (28) stmt -> . ABS
    (29) stmt -> . ADD
    (30) stmt -> . SUB
    (31) stmt -> . MUL
    (32) stmt -> . EDIV
    (33) stmt -> . LSL
    (34) stmt -> . LSR
    (35) stmt -> . CONCAT
    (36) stmt -> . SIZE
    (37) stmt -> . SLICE
    (38) stmt -> . PAIR
    (39) stmt -> . CAR
    (40) stmt -> . CDR
    (41) stmt -> . EMPTY_SET TYPE
    (42) stmt -> . MEM
    (43) stmt -> . UPDATE
    (44) stmt -> . SOME
    (45) stmt -> . NONE TYPE
    (46) stmt -> . LEFT TYPE
    (47) stmt -> . RIGHT TYPE
    (48) stmt -> . CONS
    (49) stmt -> . NIL TYPE
    (50) stmt -> . NOT
    (57) stmt -> . PUSH TYPE value
    (58) stmt -> . FAILWITH

    DROP            shift and go to state 5
    DUP             shift and go to state 6
    SWAP            shift and go to state 7
    UNIT            shift and go to state 8
    EQ              shift and go to state 9
    NEQ             shift and go to state 10
    LT              shift and go to state 11
    GT              shift and go to state 12
    LE              shift and go to state 13
    GE              shift and go to state 14
    OR              shift and go to state 15
    AND             shift and go to state 16
    XOR             shift and go to state 17
    COMPARE         shift and go to state 18
    NEG             shift and go to state 19
    ABS             shift and go to state 20
    ADD             shift and go to state 21
    SUB             shift and go to state 22
    MUL             shift and go to state 23
    EDIV            shift and go to state 24
    LSL             shift and go to state 25
    LSR             shift and go to state 26
    CONCAT          shift and go to state 27
    SIZE            shift and go to state 28
    SLICE           shift and go to state 29
    PAIR            shift and go to state 30
    CAR             shift and go to state 31
    CDR             shift and go to state 32
    EMPTY_SET       shift and go to state 33
    MEM             shift and go to state 34
    UPDATE          shift and go to state 35
    SOME            shift and go to state 36
    NONE            shift and go to state 37
    LEFT            shift and go to state 38
    RIGHT           shift and go to state 39
    CONS            shift and go to state 40
    NIL             shift and go to state 41
    NOT             shift and go to state 42
    PUSH            shift and go to state 43
    FAILWITH        shift and go to state 44

    compound_statement             shift and go to state 3
    stmt                           shift and go to state 4

state 3

    (1) body -> LBRACKET compound_statement . RBRACKET
    (5) compound_statement -> compound_statement . stmt SCOLON
    (6) compound_statement -> compound_statement . stmt
    (7) stmt -> . DROP
    (8) stmt -> . DUP
    (9) stmt -> . SWAP
    (10) stmt -> . UNIT
    (17) stmt -> . EQ
    (18) stmt -> . NEQ
    (19) stmt -> . LT
    (20) stmt -> . GT
    (21) stmt -> . LE
    (22) stmt -> . GE
    (23) stmt -> . OR
    (24) stmt -> . AND
    (25) stmt -> . XOR
    (26) stmt -> . COMPARE
    (27) stmt -> . NEG
    (28) stmt -> . ABS
    (29) stmt -> . ADD
    (30) stmt -> . SUB
    (31) stmt -> . MUL
    (32) stmt -> . EDIV
    (33) stmt -> . LSL
    (34) stmt -> . LSR
    (35) stmt -> . CONCAT
    (36) stmt -> . SIZE
    (37) stmt -> . SLICE
    (38) stmt -> . PAIR
    (39) stmt -> . CAR
    (40) stmt -> . CDR
    (41) stmt -> . EMPTY_SET TYPE
    (42) stmt -> . MEM
    (43) stmt -> . UPDATE
    (44) stmt -> . SOME
    (45) stmt -> . NONE TYPE
    (46) stmt -> . LEFT TYPE
    (47) stmt -> . RIGHT TYPE
    (48) stmt -> . CONS
    (49) stmt -> . NIL TYPE
    (50) stmt -> . NOT
    (57) stmt -> . PUSH TYPE value
    (58) stmt -> . FAILWITH

    RBRACKET        shift and go to state 45
    DROP            shift and go to state 5
    DUP             shift and go to state 6
    SWAP            shift and go to state 7
    UNIT            shift and go to state 8
    EQ              shift and go to state 9
    NEQ             shift and go to state 10
    LT              shift and go to state 11
    GT              shift and go to state 12
    LE              shift and go to state 13
    GE              shift and go to state 14
    OR              shift and go to state 15
    AND             shift and go to state 16
    XOR             shift and go to state 17
    COMPARE         shift and go to state 18
    NEG             shift and go to state 19
    ABS             shift and go to state 20
    ADD             shift and go to state 21
    SUB             shift and go to state 22
    MUL             shift and go to state 23
    EDIV            shift and go to state 24
    LSL             shift and go to state 25
    LSR             shift and go to state 26
    CONCAT          shift and go to state 27
    SIZE            shift and go to state 28
    SLICE           shift and go to state 29
    PAIR            shift and go to state 30
    CAR             shift and go to state 31
    CDR             shift and go to state 32
    EMPTY_SET       shift and go to state 33
    MEM             shift and go to state 34
    UPDATE          shift and go to state 35
    SOME            shift and go to state 36
    NONE            shift and go to state 37
    LEFT            shift and go to state 38
    RIGHT           shift and go to state 39
    CONS            shift and go to state 40
    NIL             shift and go to state 41
    NOT             shift and go to state 42
    PUSH            shift and go to state 43
    FAILWITH        shift and go to state 44

    stmt                           shift and go to state 46

state 4

    (4) compound_statement -> stmt . SCOLON

    SCOLON          shift and go to state 47


state 5

    (7) stmt -> DROP .

    SCOLON          reduce using rule 7 (stmt -> DROP .)
    RBRACKET        reduce using rule 7 (stmt -> DROP .)
    DROP            reduce using rule 7 (stmt -> DROP .)
    DUP             reduce using rule 7 (stmt -> DROP .)
    SWAP            reduce using rule 7 (stmt -> DROP .)
    UNIT            reduce using rule 7 (stmt -> DROP .)
    EQ              reduce using rule 7 (stmt -> DROP .)
    NEQ             reduce using rule 7 (stmt -> DROP .)
    LT              reduce using rule 7 (stmt -> DROP .)
    GT              reduce using rule 7 (stmt -> DROP .)
    LE              reduce using rule 7 (stmt -> DROP .)
    GE              reduce using rule 7 (stmt -> DROP .)
    OR              reduce using rule 7 (stmt -> DROP .)
    AND             reduce using rule 7 (stmt -> DROP .)
    XOR             reduce using rule 7 (stmt -> DROP .)
    COMPARE         reduce using rule 7 (stmt -> DROP .)
    NEG             reduce using rule 7 (stmt -> DROP .)
    ABS             reduce using rule 7 (stmt -> DROP .)
    ADD             reduce using rule 7 (stmt -> DROP .)
    SUB             reduce using rule 7 (stmt -> DROP .)
    MUL             reduce using rule 7 (stmt -> DROP .)
    EDIV            reduce using rule 7 (stmt -> DROP .)
    LSL             reduce using rule 7 (stmt -> DROP .)
    LSR             reduce using rule 7 (stmt -> DROP .)
    CONCAT          reduce using rule 7 (stmt -> DROP .)
    SIZE            reduce using rule 7 (stmt -> DROP .)
    SLICE           reduce using rule 7 (stmt -> DROP .)
    PAIR            reduce using rule 7 (stmt -> DROP .)
    CAR             reduce using rule 7 (stmt -> DROP .)
    CDR             reduce using rule 7 (stmt -> DROP .)
    EMPTY_SET       reduce using rule 7 (stmt -> DROP .)
    MEM             reduce using rule 7 (stmt -> DROP .)
    UPDATE          reduce using rule 7 (stmt -> DROP .)
    SOME            reduce using rule 7 (stmt -> DROP .)
    NONE            reduce using rule 7 (stmt -> DROP .)
    LEFT            reduce using rule 7 (stmt -> DROP .)
    RIGHT           reduce using rule 7 (stmt -> DROP .)
    CONS            reduce using rule 7 (stmt -> DROP .)
    NIL             reduce using rule 7 (stmt -> DROP .)
    NOT             reduce using rule 7 (stmt -> DROP .)
    PUSH            reduce using rule 7 (stmt -> DROP .)
    FAILWITH        reduce using rule 7 (stmt -> DROP .)


state 6

    (8) stmt -> DUP .

    SCOLON          reduce using rule 8 (stmt -> DUP .)
    RBRACKET        reduce using rule 8 (stmt -> DUP .)
    DROP            reduce using rule 8 (stmt -> DUP .)
    DUP             reduce using rule 8 (stmt -> DUP .)
    SWAP            reduce using rule 8 (stmt -> DUP .)
    UNIT            reduce using rule 8 (stmt -> DUP .)
    EQ              reduce using rule 8 (stmt -> DUP .)
    NEQ             reduce using rule 8 (stmt -> DUP .)
    LT              reduce using rule 8 (stmt -> DUP .)
    GT              reduce using rule 8 (stmt -> DUP .)
    LE              reduce using rule 8 (stmt -> DUP .)
    GE              reduce using rule 8 (stmt -> DUP .)
    OR              reduce using rule 8 (stmt -> DUP .)
    AND             reduce using rule 8 (stmt -> DUP .)
    XOR             reduce using rule 8 (stmt -> DUP .)
    COMPARE         reduce using rule 8 (stmt -> DUP .)
    NEG             reduce using rule 8 (stmt -> DUP .)
    ABS             reduce using rule 8 (stmt -> DUP .)
    ADD             reduce using rule 8 (stmt -> DUP .)
    SUB             reduce using rule 8 (stmt -> DUP .)
    MUL             reduce using rule 8 (stmt -> DUP .)
    EDIV            reduce using rule 8 (stmt -> DUP .)
    LSL             reduce using rule 8 (stmt -> DUP .)
    LSR             reduce using rule 8 (stmt -> DUP .)
    CONCAT          reduce using rule 8 (stmt -> DUP .)
    SIZE            reduce using rule 8 (stmt -> DUP .)
    SLICE           reduce using rule 8 (stmt -> DUP .)
    PAIR            reduce using rule 8 (stmt -> DUP .)
    CAR             reduce using rule 8 (stmt -> DUP .)
    CDR             reduce using rule 8 (stmt -> DUP .)
    EMPTY_SET       reduce using rule 8 (stmt -> DUP .)
    MEM             reduce using rule 8 (stmt -> DUP .)
    UPDATE          reduce using rule 8 (stmt -> DUP .)
    SOME            reduce using rule 8 (stmt -> DUP .)
    NONE            reduce using rule 8 (stmt -> DUP .)
    LEFT            reduce using rule 8 (stmt -> DUP .)
    RIGHT           reduce using rule 8 (stmt -> DUP .)
    CONS            reduce using rule 8 (stmt -> DUP .)
    NIL             reduce using rule 8 (stmt -> DUP .)
    NOT             reduce using rule 8 (stmt -> DUP .)
    PUSH            reduce using rule 8 (stmt -> DUP .)
    FAILWITH        reduce using rule 8 (stmt -> DUP .)


state 7

    (9) stmt -> SWAP .

    SCOLON          reduce using rule 9 (stmt -> SWAP .)
    RBRACKET        reduce using rule 9 (stmt -> SWAP .)
    DROP            reduce using rule 9 (stmt -> SWAP .)
    DUP             reduce using rule 9 (stmt -> SWAP .)
    SWAP            reduce using rule 9 (stmt -> SWAP .)
    UNIT            reduce using rule 9 (stmt -> SWAP .)
    EQ              reduce using rule 9 (stmt -> SWAP .)
    NEQ             reduce using rule 9 (stmt -> SWAP .)
    LT              reduce using rule 9 (stmt -> SWAP .)
    GT              reduce using rule 9 (stmt -> SWAP .)
    LE              reduce using rule 9 (stmt -> SWAP .)
    GE              reduce using rule 9 (stmt -> SWAP .)
    OR              reduce using rule 9 (stmt -> SWAP .)
    AND             reduce using rule 9 (stmt -> SWAP .)
    XOR             reduce using rule 9 (stmt -> SWAP .)
    COMPARE         reduce using rule 9 (stmt -> SWAP .)
    NEG             reduce using rule 9 (stmt -> SWAP .)
    ABS             reduce using rule 9 (stmt -> SWAP .)
    ADD             reduce using rule 9 (stmt -> SWAP .)
    SUB             reduce using rule 9 (stmt -> SWAP .)
    MUL             reduce using rule 9 (stmt -> SWAP .)
    EDIV            reduce using rule 9 (stmt -> SWAP .)
    LSL             reduce using rule 9 (stmt -> SWAP .)
    LSR             reduce using rule 9 (stmt -> SWAP .)
    CONCAT          reduce using rule 9 (stmt -> SWAP .)
    SIZE            reduce using rule 9 (stmt -> SWAP .)
    SLICE           reduce using rule 9 (stmt -> SWAP .)
    PAIR            reduce using rule 9 (stmt -> SWAP .)
    CAR             reduce using rule 9 (stmt -> SWAP .)
    CDR             reduce using rule 9 (stmt -> SWAP .)
    EMPTY_SET       reduce using rule 9 (stmt -> SWAP .)
    MEM             reduce using rule 9 (stmt -> SWAP .)
    UPDATE          reduce using rule 9 (stmt -> SWAP .)
    SOME            reduce using rule 9 (stmt -> SWAP .)
    NONE            reduce using rule 9 (stmt -> SWAP .)
    LEFT            reduce using rule 9 (stmt -> SWAP .)
    RIGHT           reduce using rule 9 (stmt -> SWAP .)
    CONS            reduce using rule 9 (stmt -> SWAP .)
    NIL             reduce using rule 9 (stmt -> SWAP .)
    NOT             reduce using rule 9 (stmt -> SWAP .)
    PUSH            reduce using rule 9 (stmt -> SWAP .)
    FAILWITH        reduce using rule 9 (stmt -> SWAP .)


state 8

    (10) stmt -> UNIT .

    SCOLON          reduce using rule 10 (stmt -> UNIT .)
    RBRACKET        reduce using rule 10 (stmt -> UNIT .)
    DROP            reduce using rule 10 (stmt -> UNIT .)
    DUP             reduce using rule 10 (stmt -> UNIT .)
    SWAP            reduce using rule 10 (stmt -> UNIT .)
    UNIT            reduce using rule 10 (stmt -> UNIT .)
    EQ              reduce using rule 10 (stmt -> UNIT .)
    NEQ             reduce using rule 10 (stmt -> UNIT .)
    LT              reduce using rule 10 (stmt -> UNIT .)
    GT              reduce using rule 10 (stmt -> UNIT .)
    LE              reduce using rule 10 (stmt -> UNIT .)
    GE              reduce using rule 10 (stmt -> UNIT .)
    OR              reduce using rule 10 (stmt -> UNIT .)
    AND             reduce using rule 10 (stmt -> UNIT .)
    XOR             reduce using rule 10 (stmt -> UNIT .)
    COMPARE         reduce using rule 10 (stmt -> UNIT .)
    NEG             reduce using rule 10 (stmt -> UNIT .)
    ABS             reduce using rule 10 (stmt -> UNIT .)
    ADD             reduce using rule 10 (stmt -> UNIT .)
    SUB             reduce using rule 10 (stmt -> UNIT .)
    MUL             reduce using rule 10 (stmt -> UNIT .)
    EDIV            reduce using rule 10 (stmt -> UNIT .)
    LSL             reduce using rule 10 (stmt -> UNIT .)
    LSR             reduce using rule 10 (stmt -> UNIT .)
    CONCAT          reduce using rule 10 (stmt -> UNIT .)
    SIZE            reduce using rule 10 (stmt -> UNIT .)
    SLICE           reduce using rule 10 (stmt -> UNIT .)
    PAIR            reduce using rule 10 (stmt -> UNIT .)
    CAR             reduce using rule 10 (stmt -> UNIT .)
    CDR             reduce using rule 10 (stmt -> UNIT .)
    EMPTY_SET       reduce using rule 10 (stmt -> UNIT .)
    MEM             reduce using rule 10 (stmt -> UNIT .)
    UPDATE          reduce using rule 10 (stmt -> UNIT .)
    SOME            reduce using rule 10 (stmt -> UNIT .)
    NONE            reduce using rule 10 (stmt -> UNIT .)
    LEFT            reduce using rule 10 (stmt -> UNIT .)
    RIGHT           reduce using rule 10 (stmt -> UNIT .)
    CONS            reduce using rule 10 (stmt -> UNIT .)
    NIL             reduce using rule 10 (stmt -> UNIT .)
    NOT             reduce using rule 10 (stmt -> UNIT .)
    PUSH            reduce using rule 10 (stmt -> UNIT .)
    FAILWITH        reduce using rule 10 (stmt -> UNIT .)


state 9

    (17) stmt -> EQ .

    SCOLON          reduce using rule 17 (stmt -> EQ .)
    RBRACKET        reduce using rule 17 (stmt -> EQ .)
    DROP            reduce using rule 17 (stmt -> EQ .)
    DUP             reduce using rule 17 (stmt -> EQ .)
    SWAP            reduce using rule 17 (stmt -> EQ .)
    UNIT            reduce using rule 17 (stmt -> EQ .)
    EQ              reduce using rule 17 (stmt -> EQ .)
    NEQ             reduce using rule 17 (stmt -> EQ .)
    LT              reduce using rule 17 (stmt -> EQ .)
    GT              reduce using rule 17 (stmt -> EQ .)
    LE              reduce using rule 17 (stmt -> EQ .)
    GE              reduce using rule 17 (stmt -> EQ .)
    OR              reduce using rule 17 (stmt -> EQ .)
    AND             reduce using rule 17 (stmt -> EQ .)
    XOR             reduce using rule 17 (stmt -> EQ .)
    COMPARE         reduce using rule 17 (stmt -> EQ .)
    NEG             reduce using rule 17 (stmt -> EQ .)
    ABS             reduce using rule 17 (stmt -> EQ .)
    ADD             reduce using rule 17 (stmt -> EQ .)
    SUB             reduce using rule 17 (stmt -> EQ .)
    MUL             reduce using rule 17 (stmt -> EQ .)
    EDIV            reduce using rule 17 (stmt -> EQ .)
    LSL             reduce using rule 17 (stmt -> EQ .)
    LSR             reduce using rule 17 (stmt -> EQ .)
    CONCAT          reduce using rule 17 (stmt -> EQ .)
    SIZE            reduce using rule 17 (stmt -> EQ .)
    SLICE           reduce using rule 17 (stmt -> EQ .)
    PAIR            reduce using rule 17 (stmt -> EQ .)
    CAR             reduce using rule 17 (stmt -> EQ .)
    CDR             reduce using rule 17 (stmt -> EQ .)
    EMPTY_SET       reduce using rule 17 (stmt -> EQ .)
    MEM             reduce using rule 17 (stmt -> EQ .)
    UPDATE          reduce using rule 17 (stmt -> EQ .)
    SOME            reduce using rule 17 (stmt -> EQ .)
    NONE            reduce using rule 17 (stmt -> EQ .)
    LEFT            reduce using rule 17 (stmt -> EQ .)
    RIGHT           reduce using rule 17 (stmt -> EQ .)
    CONS            reduce using rule 17 (stmt -> EQ .)
    NIL             reduce using rule 17 (stmt -> EQ .)
    NOT             reduce using rule 17 (stmt -> EQ .)
    PUSH            reduce using rule 17 (stmt -> EQ .)
    FAILWITH        reduce using rule 17 (stmt -> EQ .)


state 10

    (18) stmt -> NEQ .

    SCOLON          reduce using rule 18 (stmt -> NEQ .)
    RBRACKET        reduce using rule 18 (stmt -> NEQ .)
    DROP            reduce using rule 18 (stmt -> NEQ .)
    DUP             reduce using rule 18 (stmt -> NEQ .)
    SWAP            reduce using rule 18 (stmt -> NEQ .)
    UNIT            reduce using rule 18 (stmt -> NEQ .)
    EQ              reduce using rule 18 (stmt -> NEQ .)
    NEQ             reduce using rule 18 (stmt -> NEQ .)
    LT              reduce using rule 18 (stmt -> NEQ .)
    GT              reduce using rule 18 (stmt -> NEQ .)
    LE              reduce using rule 18 (stmt -> NEQ .)
    GE              reduce using rule 18 (stmt -> NEQ .)
    OR              reduce using rule 18 (stmt -> NEQ .)
    AND             reduce using rule 18 (stmt -> NEQ .)
    XOR             reduce using rule 18 (stmt -> NEQ .)
    COMPARE         reduce using rule 18 (stmt -> NEQ .)
    NEG             reduce using rule 18 (stmt -> NEQ .)
    ABS             reduce using rule 18 (stmt -> NEQ .)
    ADD             reduce using rule 18 (stmt -> NEQ .)
    SUB             reduce using rule 18 (stmt -> NEQ .)
    MUL             reduce using rule 18 (stmt -> NEQ .)
    EDIV            reduce using rule 18 (stmt -> NEQ .)
    LSL             reduce using rule 18 (stmt -> NEQ .)
    LSR             reduce using rule 18 (stmt -> NEQ .)
    CONCAT          reduce using rule 18 (stmt -> NEQ .)
    SIZE            reduce using rule 18 (stmt -> NEQ .)
    SLICE           reduce using rule 18 (stmt -> NEQ .)
    PAIR            reduce using rule 18 (stmt -> NEQ .)
    CAR             reduce using rule 18 (stmt -> NEQ .)
    CDR             reduce using rule 18 (stmt -> NEQ .)
    EMPTY_SET       reduce using rule 18 (stmt -> NEQ .)
    MEM             reduce using rule 18 (stmt -> NEQ .)
    UPDATE          reduce using rule 18 (stmt -> NEQ .)
    SOME            reduce using rule 18 (stmt -> NEQ .)
    NONE            reduce using rule 18 (stmt -> NEQ .)
    LEFT            reduce using rule 18 (stmt -> NEQ .)
    RIGHT           reduce using rule 18 (stmt -> NEQ .)
    CONS            reduce using rule 18 (stmt -> NEQ .)
    NIL             reduce using rule 18 (stmt -> NEQ .)
    NOT             reduce using rule 18 (stmt -> NEQ .)
    PUSH            reduce using rule 18 (stmt -> NEQ .)
    FAILWITH        reduce using rule 18 (stmt -> NEQ .)


state 11

    (19) stmt -> LT .

    SCOLON          reduce using rule 19 (stmt -> LT .)
    RBRACKET        reduce using rule 19 (stmt -> LT .)
    DROP            reduce using rule 19 (stmt -> LT .)
    DUP             reduce using rule 19 (stmt -> LT .)
    SWAP            reduce using rule 19 (stmt -> LT .)
    UNIT            reduce using rule 19 (stmt -> LT .)
    EQ              reduce using rule 19 (stmt -> LT .)
    NEQ             reduce using rule 19 (stmt -> LT .)
    LT              reduce using rule 19 (stmt -> LT .)
    GT              reduce using rule 19 (stmt -> LT .)
    LE              reduce using rule 19 (stmt -> LT .)
    GE              reduce using rule 19 (stmt -> LT .)
    OR              reduce using rule 19 (stmt -> LT .)
    AND             reduce using rule 19 (stmt -> LT .)
    XOR             reduce using rule 19 (stmt -> LT .)
    COMPARE         reduce using rule 19 (stmt -> LT .)
    NEG             reduce using rule 19 (stmt -> LT .)
    ABS             reduce using rule 19 (stmt -> LT .)
    ADD             reduce using rule 19 (stmt -> LT .)
    SUB             reduce using rule 19 (stmt -> LT .)
    MUL             reduce using rule 19 (stmt -> LT .)
    EDIV            reduce using rule 19 (stmt -> LT .)
    LSL             reduce using rule 19 (stmt -> LT .)
    LSR             reduce using rule 19 (stmt -> LT .)
    CONCAT          reduce using rule 19 (stmt -> LT .)
    SIZE            reduce using rule 19 (stmt -> LT .)
    SLICE           reduce using rule 19 (stmt -> LT .)
    PAIR            reduce using rule 19 (stmt -> LT .)
    CAR             reduce using rule 19 (stmt -> LT .)
    CDR             reduce using rule 19 (stmt -> LT .)
    EMPTY_SET       reduce using rule 19 (stmt -> LT .)
    MEM             reduce using rule 19 (stmt -> LT .)
    UPDATE          reduce using rule 19 (stmt -> LT .)
    SOME            reduce using rule 19 (stmt -> LT .)
    NONE            reduce using rule 19 (stmt -> LT .)
    LEFT            reduce using rule 19 (stmt -> LT .)
    RIGHT           reduce using rule 19 (stmt -> LT .)
    CONS            reduce using rule 19 (stmt -> LT .)
    NIL             reduce using rule 19 (stmt -> LT .)
    NOT             reduce using rule 19 (stmt -> LT .)
    PUSH            reduce using rule 19 (stmt -> LT .)
    FAILWITH        reduce using rule 19 (stmt -> LT .)


state 12

    (20) stmt -> GT .

    SCOLON          reduce using rule 20 (stmt -> GT .)
    RBRACKET        reduce using rule 20 (stmt -> GT .)
    DROP            reduce using rule 20 (stmt -> GT .)
    DUP             reduce using rule 20 (stmt -> GT .)
    SWAP            reduce using rule 20 (stmt -> GT .)
    UNIT            reduce using rule 20 (stmt -> GT .)
    EQ              reduce using rule 20 (stmt -> GT .)
    NEQ             reduce using rule 20 (stmt -> GT .)
    LT              reduce using rule 20 (stmt -> GT .)
    GT              reduce using rule 20 (stmt -> GT .)
    LE              reduce using rule 20 (stmt -> GT .)
    GE              reduce using rule 20 (stmt -> GT .)
    OR              reduce using rule 20 (stmt -> GT .)
    AND             reduce using rule 20 (stmt -> GT .)
    XOR             reduce using rule 20 (stmt -> GT .)
    COMPARE         reduce using rule 20 (stmt -> GT .)
    NEG             reduce using rule 20 (stmt -> GT .)
    ABS             reduce using rule 20 (stmt -> GT .)
    ADD             reduce using rule 20 (stmt -> GT .)
    SUB             reduce using rule 20 (stmt -> GT .)
    MUL             reduce using rule 20 (stmt -> GT .)
    EDIV            reduce using rule 20 (stmt -> GT .)
    LSL             reduce using rule 20 (stmt -> GT .)
    LSR             reduce using rule 20 (stmt -> GT .)
    CONCAT          reduce using rule 20 (stmt -> GT .)
    SIZE            reduce using rule 20 (stmt -> GT .)
    SLICE           reduce using rule 20 (stmt -> GT .)
    PAIR            reduce using rule 20 (stmt -> GT .)
    CAR             reduce using rule 20 (stmt -> GT .)
    CDR             reduce using rule 20 (stmt -> GT .)
    EMPTY_SET       reduce using rule 20 (stmt -> GT .)
    MEM             reduce using rule 20 (stmt -> GT .)
    UPDATE          reduce using rule 20 (stmt -> GT .)
    SOME            reduce using rule 20 (stmt -> GT .)
    NONE            reduce using rule 20 (stmt -> GT .)
    LEFT            reduce using rule 20 (stmt -> GT .)
    RIGHT           reduce using rule 20 (stmt -> GT .)
    CONS            reduce using rule 20 (stmt -> GT .)
    NIL             reduce using rule 20 (stmt -> GT .)
    NOT             reduce using rule 20 (stmt -> GT .)
    PUSH            reduce using rule 20 (stmt -> GT .)
    FAILWITH        reduce using rule 20 (stmt -> GT .)


state 13

    (21) stmt -> LE .

    SCOLON          reduce using rule 21 (stmt -> LE .)
    RBRACKET        reduce using rule 21 (stmt -> LE .)
    DROP            reduce using rule 21 (stmt -> LE .)
    DUP             reduce using rule 21 (stmt -> LE .)
    SWAP            reduce using rule 21 (stmt -> LE .)
    UNIT            reduce using rule 21 (stmt -> LE .)
    EQ              reduce using rule 21 (stmt -> LE .)
    NEQ             reduce using rule 21 (stmt -> LE .)
    LT              reduce using rule 21 (stmt -> LE .)
    GT              reduce using rule 21 (stmt -> LE .)
    LE              reduce using rule 21 (stmt -> LE .)
    GE              reduce using rule 21 (stmt -> LE .)
    OR              reduce using rule 21 (stmt -> LE .)
    AND             reduce using rule 21 (stmt -> LE .)
    XOR             reduce using rule 21 (stmt -> LE .)
    COMPARE         reduce using rule 21 (stmt -> LE .)
    NEG             reduce using rule 21 (stmt -> LE .)
    ABS             reduce using rule 21 (stmt -> LE .)
    ADD             reduce using rule 21 (stmt -> LE .)
    SUB             reduce using rule 21 (stmt -> LE .)
    MUL             reduce using rule 21 (stmt -> LE .)
    EDIV            reduce using rule 21 (stmt -> LE .)
    LSL             reduce using rule 21 (stmt -> LE .)
    LSR             reduce using rule 21 (stmt -> LE .)
    CONCAT          reduce using rule 21 (stmt -> LE .)
    SIZE            reduce using rule 21 (stmt -> LE .)
    SLICE           reduce using rule 21 (stmt -> LE .)
    PAIR            reduce using rule 21 (stmt -> LE .)
    CAR             reduce using rule 21 (stmt -> LE .)
    CDR             reduce using rule 21 (stmt -> LE .)
    EMPTY_SET       reduce using rule 21 (stmt -> LE .)
    MEM             reduce using rule 21 (stmt -> LE .)
    UPDATE          reduce using rule 21 (stmt -> LE .)
    SOME            reduce using rule 21 (stmt -> LE .)
    NONE            reduce using rule 21 (stmt -> LE .)
    LEFT            reduce using rule 21 (stmt -> LE .)
    RIGHT           reduce using rule 21 (stmt -> LE .)
    CONS            reduce using rule 21 (stmt -> LE .)
    NIL             reduce using rule 21 (stmt -> LE .)
    NOT             reduce using rule 21 (stmt -> LE .)
    PUSH            reduce using rule 21 (stmt -> LE .)
    FAILWITH        reduce using rule 21 (stmt -> LE .)

